[gd_scene load_steps=13 format=2]

[ext_resource path="res://prototype/Nut.tscn" type="PackedScene" id=1]
[ext_resource path="res://prototype/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://prototype/Base.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://prototype/UI.gd" type="Script" id=5]
[ext_resource path="res://prototype/Main.gd" type="Script" id=6]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 100, 2, 100 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.207843, 0.611765, 0.329412, 1 )
albedo_texture = ExtResource( 4 )
uv1_triplanar = true

[sub_resource type="BoxShape" id=3]
extents = Vector3( 50, 1, 50 )

[sub_resource type="CubeMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.576471, 0.576471, 0.576471, 1 )

[sub_resource type="BoxShape" id=6]

[node name="Main" type="Spatial"]
script = ExtResource( 6 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.486198, 0.873849, 0, -0.873849, 0.486198, 0, 16.2118, 2.2398 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
speed = 600.0

[node name="CountDown" type="Timer" parent="."]
process_mode = 0
wait_time = 15.0
one_shot = true
autostart = true

[node name="Base" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.78697, 2, -4.94237 )
capacity = 7

[node name="Sun" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.509162, -0.860671, 0, 0.860671, 0.509162, 0, 27.3324, 0 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Time" type="Label" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0
text = "
"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
margin_left = 32.0
margin_top = 32.0
margin_right = 40.0
margin_bottom = 40.0

[node name="Carrying" type="Label" parent="UI/VBoxContainer"]
margin_right = 51.0
margin_bottom = 14.0
text = "Carrying"
align = 2

[node name="Storage" type="Label" parent="UI/VBoxContainer"]
margin_top = 18.0
margin_right = 51.0
margin_bottom = 32.0
text = "Storage"
align = 2

[node name="World" type="Spatial" parent="."]

[node name="Floor" type="StaticBody" parent="World"]
collision_layer = 8
collision_mask = 0

[node name="MeshInstance" type="MeshInstance" parent="World/Floor"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="World/Floor"]
shape = SubResource( 3 )

[node name="Rock" type="StaticBody" parent="World"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.45606, 2, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="World/Rock"]
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="World/Rock"]
shape = SubResource( 6 )

[node name="Rock2" type="StaticBody" parent="World"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.58374, 2, -10.5042 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="World/Rock2"]
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="World/Rock2"]
shape = SubResource( 6 )

[node name="Rock3" type="StaticBody" parent="World"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.58374, 2, -10.5042 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="World/Rock3"]
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="World/Rock3"]
shape = SubResource( 6 )

[node name="Rock4" type="StaticBody" parent="World"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.75517, 2, -2.74182 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="World/Rock4"]
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="World/Rock4"]
shape = SubResource( 6 )

[node name="Nuts" type="Spatial" parent="."]

[node name="Nut0" parent="Nuts" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.2608, 2.44187, 0 )

[node name="Nut1" parent="Nuts" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.30627, 2.44187, -4.01714 )

[node name="Nut2" parent="Nuts" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.772501, 2.44187, 3.44475 )

[node name="Nut3" parent="Nuts" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.5661, 2.44187, 3.44475 )

[node name="Nut4" parent="Nuts" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.5661, 2.44187, -4.90595 )

[node name="Nut5" parent="Nuts" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.55764, 2.44187, -12.7583 )

[node name="Nut6" parent="Nuts" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.7571, 1.53059, -3.20942 )

[connection signal="collected_nut" from="Player" to="UI" method="_on_Player_collected_nut"]
[connection signal="deposited_nuts" from="Player" to="UI" method="_on_Player_deposited_nuts"]
[connection signal="timeout" from="CountDown" to="." method="_on_CountDown_timeout"]
[connection signal="full" from="Base" to="." method="_on_Base_full"]
